# pyrpn

./: .gitignore  debug_helper.py  edit.sh  pyproject.toml  whitelist.txt
pyrpn/: __init__.py  _calculator.py  _commands.py  _factory.py  _main.py  _stack.py  main.py
tests/: __init__.py  test_bogus.py  test_calculator.py  test_stack.py
